@@ -1,4 +1,4 @@
-SUBDIRS = datrie tools doc
+SUBDIRS = datrie tools man doc
 
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = datrie.pc
