@@ -1,1 +1,1 @@
-debian/trietool.1
+man/trietool.1
