@@ -71,5 +71,4 @@ Show version of program.
 .SH AUTHOR
 libdatrie was written by Theppitak Karoonboonyanan.
 .PP
-This manual page was written by Theppitak Karoonboonyanan <thep@linux.thai.net>,
-for the Debian project (but may be used by others).
+This manual page was written by Theppitak Karoonboonyanan <thep@linux.thai.net>.
